# aula17_python

./: README.md  desafio.py  desafio_query.py  exemplo_01.py  pyproject.toml
