[project]
name = "aula17-python"
version = "0.1.0"
description = ""
authors = [
    {name = "Gilson Langa",email = "giu.langa@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy (>=2.0.42,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
